--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,10 @@
             <input type="text" id="street" class="form-control bg-dark border-0 rounded-0 text-light my-4" placeholder="Calle .., 7" ></input>
             <label for="title-rooms">Estado</label>
             <input type="text" id="state" class="form-control bg-dark border-0 rounded-0 text-light my-4" placeholder="Obra nueva" ></input>
-            <!-- <label for="title-rooms">Habitaciones</label>
-            <input type="number" id="rooms"class="form-control bg-dark border-0 rounded-0 text-light my-4" ></input>
+            <label for="title-rooms">Habitaciones</label>
+            <input type="number" id="rooms" class="form-control bg-dark border-0 rounded-0 text-light my-4" ></input>
             <label for="title-price">Precio</label>
-            <input type="number" class="form-control bg-dark border-0 rounded-0 text-light my-4" id="price"></input> -->
+            <input type="number" class="form-control bg-dark border-0 rounded-0 text-light my-4" id="price"></input> 
             <br/><button class="btn btn-default" style="border-color:gray">Añadir</button>
           </form>
         </div>
